[package]
name = "cw-fungible"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13"
schemars = "0.8.8"
serde = { verison = "1.0.136", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
